--- a/index.html
+++ b/index.html
@@ -18,10 +18,32 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body style="height: 1000px;">
-    <nav class="position-fixed d-flex align-items-center justify-content-center w-100 py-1" style="box-shadow: 0px 0px 15px 2px rgba(0, 0, 0, 0.296);">
-        <img src="./images/utils/logo.png" alt="" height="50px" class="me-2"> <p style="font-size: small; font-weight: bold;" class="m-0 p-0 font-danger"> | UANG KEMBALI 100% BILA PRODUK PALSU</p>
+  <body>
+    <!-- navbar -->
+    <nav class="navbar">
+      <img src="./images/utils/logo.png" height="50px" class="me-2" />
+      <p class="m-0 p-0 fw-bold fs-6">| MADU ATH-THOIFAH 🍯</p>
     </nav>
+    <!-- navbar end -->
+
+    <!-- question section -->
+    <section class="questions">
+      <h1 class="fs-1">
+        TAHUKAH KAMU KALAU TERNYATA HAL INI <span class="text-danger fw-bold">BIKIN SUSAH HAMIL</span>?
+      </h1>
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <img
+            src="./images/utils/question1.png"
+            alt=""
+            class="card image-fluid image-question"
+          />
+        </div>
+        <div class="col-12 col-lg-6"></div>
+      </div>
+    </section>
+    <!-- question section end -->
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
