--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar">
+    <nav class="navbar bg-white">
       <img src="./images/utils/logo.png" height="50px" class="me-2" />
       <p class="m-0 p-0 fw-bold fs-6">| MADU ATH-THOIFAH 🍯</p>
     </nav>
@@ -28,9 +35,18 @@
 
     <!-- question section -->
     <section class="questions">
-      <h1 class="fs-1">
-        TAHUKAH KAMU KALAU TERNYATA HAL INI <span class="text-danger fw-bold">BIKIN SUSAH HAMIL</span>?
+      <h1 class="fs-1" style="margin-bottom: 20px;">
+        KALAU KAMU KESINI KARENA INGIN TAHU <span class="text-danger fw-bold">TIPS LANCAR PROMIL,</span> INI NIH LANGSUNG MIMIN KASIH TAHU YAITU 👇👇👇
       </h1>
+      <h1 class="fs-1 text-center">
+        <span class="text-danger fw-bold">MADU ZURIAT ATH-THOIFAH</span>
+      </h1>
+      <h1 class="fs-1 text-center">
+        ⭐⭐⭐⭐⭐
+      </h1>
+
+      <div class="d-none d-lg-block mb-5"></div>
+      <div class="d-block d-lg-none mb-3"></div>
       <div class="row">
         <div class="col-12 col-lg-6">
           <img
@@ -39,7 +55,18 @@
             class="card image-fluid image-question"
           />
         </div>
-        <div class="col-12 col-lg-6"></div>
+        <div class="col-12 col-lg-6">
+          <div class="d-block d-lg-none m-4"></div>
+          <ul class="warn_list">
+            <li class="text-nowrap p-0 m-0 fs-4 fw-bold">
+              <i class="fa-solid fa-ban text-danger fs-2"></i> Terlalu Banyak
+              Begadang
+            </li>
+            <li class="text-nowrap p-0 m-0 fs-4 fw-bold mt-3">
+              <i class="fa-solid fa-ban text-danger fs-2"></i> Olahraga Berlebihan
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <!-- question section end -->
