--- a/index.html
+++ b/index.html
@@ -28,23 +28,106 @@
   <body>
     <!-- navbar -->
     <nav class="navbar bg-white">
-      <img src="./images/utils/logo.png" height="50px" class="me-2" />
+      <img
+        src="./images/utils/logo seller transparent.png"
+        height="50px"
+        class="me-2"
+      />
       <p class="m-0 p-0 fw-bold fs-6">| MADU ATH-THOIFAH 🍯</p>
     </nav>
     <!-- navbar end -->
 
+    <!-- wa icon -->
+
+    <div class="call__me">
+      <a href="#" class="">
+        <img src="./images/utils/wa.png" height="50px" />
+      </a>
+    </div>
+
+    <!-- wa icon end -->
+
+    <!-- clickbait -->
+    <div class="bait">
+      <h1 class="fs-1 text-center" style="margin-bottom: 20px">
+        ALHAMDULILLAH, AKHIRNYA TIBA..
+      </h1>
+      <h1 class="text-danger text-center fw-bold mb-4">AKU HAMIL!</h1>
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <img
+            src="./images/background/test.jpeg"
+            alt=""
+            class="image-fluid card w-100"
+          />
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="d-block d-lg-none m-4"></div>
+          <h3 class="text-center">
+            Setelah sekian lama, kami menunggu
+            <span class="text-danger">akhirnya hamil juga..</span>
+          </h3>
+          <h5 class="text-center">
+            Itulah mungkin ungkapan hati dari sepasang suami istri yang sudah
+            berjuang untuk mendapatkan buah hati mereka
+          </h5>
+          <h1 class="text-center text-danger mt-4">ALHAMDULILLAH</h1>
+          <h5 class="text-center">
+            Sungguh membahagiakan sekali, mungkin setelah sekian lama menunggu
+            akhirnya berhasil juga
+          </h5>
+          <h6 class="text-center mt-3">
+            <span class="text-danger"
+              >Jika kamu dan pasanganmu sedang program kehamilan</span
+            >
+            baik masih baru mulai atau sudah cukup lama, luangkan waktumu
+            sejenak yang kurang lebih hanya 3 - 5 menit untuk membaca artikel
+            ini.
+          </h6>
+        </div>
+      </div>
+      <hr />
+      <h4 class="text-center mt-4">APAKAH CERITA DIATAS ADALAH BOHONG?</h4>
+      <h6 class="text-center">
+        Mungkin hal dibawah ini bisa mengartikan lebih jelas maksud kami.
+      </h6>
+    </div>
+
+    <!-- clickbait end -->
+
+    <!-- pesan -->
+    <!-- <a href="" class="call__me bg-dark text-success">
+      <span class="d-flex align-items-center justify-content-center border border-success rounded px-4 py-3">
+        <img src="./images/utils/wa.png" alt="" height="30px" class="me-3">
+        SAYA INGIN BERIKHTIAR MENGGUNAKAN MADU PROMIL</span>
+    </a> -->
+    <!-- pesan end -->
+
     <!-- question section -->
     <section class="questions">
-      <h1 class="fs-1" style="margin-bottom: 20px;">
-        KALAU KAMU KESINI KARENA INGIN TAHU <span class="text-danger fw-bold">TIPS LANCAR PROMIL,</span> INI NIH LANGSUNG MIMIN KASIH TAHU YAITU 👇👇👇
+      <h1 class="fs-1 text-center" style="margin-bottom: 20px">
+        LALU, <span class="text-danger">BAGAIMANA TIPSNYA BIAR CEPAT HAMIL?</span>
+      </h1>
+      <div class="row mb-5">
+        <div class="col-12">
+          <img
+            src="./images/utils/question1.png"
+            alt=""
+            class="card image-fluid image-question"
+          />
+        </div>
+      </div>
+      <h1 class="fs-1 text-center">
+MEMPERKENALKAN
       </h1>
       <h1 class="fs-1 text-center">
-        <span class="text-danger fw-bold">MADU ZURIAT ATH-THOIFAH</span>
+        <span class="text-danger fw-bold">MADU ZURIAT PROMIL ATH-THOIFAH</span>
       </h1>
-      <h1 class="fs-1 text-center">
-        ⭐⭐⭐⭐⭐
-      </h1>
+      <h1 class="fs-1 text-center">⭐⭐⭐⭐⭐</h1>
 
+      <h5 class="text-center text-danger fw-bold fst-italic">
+        Sudah terbukti diterima masyarakat karena khasiatnya!
+      </h5>
       <div class="d-none d-lg-block mb-5"></div>
       <div class="d-block d-lg-none mb-3"></div>
       <div class="row">
@@ -57,19 +140,133 @@
         </div>
         <div class="col-12 col-lg-6">
           <div class="d-block d-lg-none m-4"></div>
-          <ul class="warn_list">
-            <li class="text-nowrap p-0 m-0 fs-4 fw-bold">
-              <i class="fa-solid fa-ban text-danger fs-2"></i> Terlalu Banyak
-              Begadang
-            </li>
-            <li class="text-nowrap p-0 m-0 fs-4 fw-bold mt-3">
-              <i class="fa-solid fa-ban text-danger fs-2"></i> Olahraga Berlebihan
-            </li>
-          </ul>
+          <h4 class="text-center">
+            <span class="text-danger fw-bold"
+              >KENAPA HARUS MINUM MADU ZURIAT PROMIL?</span
+            >
+          </h4>
+          <p class="p-0 m-0 fs-6 fw-bold mb-4 px-2">
+            Karena terdapat senyawa aktif di dalam Ekstrak Madu Zuriat Promil
+            antara lain yaitu:
+          </p>
+          <div class="d-flex w-100">
+            <i
+              class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"
+            ></i>
+            <p class="p-0 m-0 fs-6 fw-bold">
+              Mengandung Eugenol berguna untuk
+              <span class="text-danger fw-bold"
+                >membunuh jamur penyebab keputihan.</span
+              >
+            </p>
+          </div>
+          <div class="d-flex w-100 mt-3">
+            <i
+              class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"
+            ></i>
+            <p class="p-0 m-0 fs-6 fw-bold">
+              Mengandung Anetol dan Boron yang berguna untuk
+              <span class="text-danger fw-bold"
+                >merangsang kerja hormon estrogen dan androgen ( menjaga
+                kesehatan reproduksi pria dan wanita ).</span
+              >
+            </p>
+          </div>
+          <div class="d-flex w-100 mt-3">
+            <i
+              class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"
+            ></i>
+            <p class="p-0 m-0 fs-6 fw-bold">
+              Mengandung Stigmasterol yaitu untuk
+              <span class="text-danger fw-bold"
+                >merangsang ovulasi ( pematangan sel telur ).</span
+              >
+            </p>
+          </div>
+          <div class="d-flex w-100 mt-3">
+            <i
+              class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"
+            ></i>
+            <p class="p-0 m-0 fs-6 fw-bold">
+              Mengandung Arginin berguna untuk
+              <span class="text-danger fw-bold"
+                >merperkuat daya hidup sperma ( membantu mencegah kemandulan
+                ).</span
+              >
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <!-- question section end -->
+
+    <!-- benefit -->
+
+    <section class="benefit">
+      <h4 style="margin-bottom: 20px">
+        INSYAALLAH DENGAN KANDUNGAN YANG TERDAPAT DALAM
+        <span class="text-danger fw-bold">MADU PROMIL BERKHASIAT SEPERTI </span>
+        👇👇👇
+      </h4>
+      <div class="d-block d-md-flex justify-content-center">
+        <div class="d-flex mb-3 mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">Menyuburkan sperma dan ovum</p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">Menguatkan dinding rahim</p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">Untuk kesuburan Kandungan</p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">
+            Memperkuat daya tahan dan mengentalkan sperma
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">Merangsang Kerja Hormon</p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">
+            Menjaga Kesehatan Reproduksi wanita
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6 fw-bold">
+            Membantu mengatasi gangguan haid dan keputihan
+          </p>
+        </div>
+      </div>
+    </section>
+    <div class="m-5"></div>
+    <section class="testimoni">
+      <h3 class="text-center fw-bold">TESTIMONI PEJUANG PROMIL</h3>
+      <h1 class="text-center">⭐⭐⭐⭐⭐</h1>
+    </section>
+
+    <!-- benefit end -->
+
+    <!-- footer -->
+    <div class="m-4"></div>
+    <section
+      class="p-4 bg-dark d-flex flex-column align-items-center justify-content-center"
+    >
+      <p class="text-white">
+        Copyright by
+        <a href="www.ath-thoifah.com" class="text-decoration-none text-white"
+          >www.ath-thoifah.com</a
+        >
+      </p>
+    </section>
+
+    <!-- footer end -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
