--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
   <body>
     <!-- navbar -->
     <nav class="navbar bg-white">
-      <img
-        src="./images/utils/logo seller transparent.png"
-        height="50px"
-        class="me-2"
-      />
+      <img src="./images/utils/logo.png" height="50px" class="me-2" />
       <p class="m-0 p-0 fw-bold fs-6">| MADU ATH-THOIFAH 🍯</p>
     </nav>
     <!-- navbar end -->
@@ -80,17 +76,61 @@
             <span class="text-danger"
               >Jika kamu dan pasanganmu sedang program kehamilan</span
             >
-            baik masih baru mulai atau sudah cukup lama, luangkan waktumu
-            sejenak yang kurang lebih hanya 3 - 5 menit untuk membaca artikel
-            ini.
+            baik masih baru memulai program atau sudah cukup lama, luangkan
+            waktumu sejenak yang kurang lebih hanya 3 - 5 menit untuk membaca
+            artikel ini.
           </h6>
         </div>
       </div>
       <hr />
-      <h4 class="text-center mt-4">APAKAH CERITA DIATAS ADALAH BOHONG?</h4>
+      <h4 class="text-center mt-4 mb-1">
+        MENIKAH ADALAH
+        <span class="text-danger">HAL YANG SANGAT MEMBAHAGIAKAN</span>
+      </h4>
+      <div class="row mb-3 mt-3">
+        <div class="col-12">
+          <img
+            src="./images/background/wedding.jpeg"
+            alt=""
+            class="card image-fluid image-question"
+          />
+        </div>
+      </div>
       <h6 class="text-center">
-        Mungkin hal dibawah ini bisa mengartikan lebih jelas maksud kami.
+        Walaupan tidak selalu tersenyum dalam berumah tangga, mungkin ada
+        keributan dalam rumah tangga. Mungkin karena kurang saling mengenal satu
+        sama lain, selisih pendapat dengan pasangan. Itu adalah hal yang lumrah
+        dan hadapi. Serta tetap tidak dipungkiri bahwa menikah adalah salah satu
+        sebab kebahagiaan yang Allah hendaki untuk setiap manusia ciptaan-Nya.
       </h6>
+      <h5 class="text-center mt-4">
+        Namun, Jujur saja ada hal yang sangat mengganggu hati dan pikiran...
+      </h5>
+      <h5 class="text-center text-danger mt-4">
+        BENAR SEKALI! HAL INI SANGAT MENGGANGGU!
+      </h5>
+      <h6 class="text-center mt-4">
+        Walaupun sudah menikah dengan status hubungan yang sah, bahkan dengan
+        cakap berani dan raut wajah gembira kamu menyatakan kepada orang
+        "ALHAMDULILLAH, KAMI SUDAH MENIKAH". Namun, pada saat ada perkumpulan
+        keluarga, pengajian, atau suatu pertemuan. Ada yang bertanya..
+      </h6>
+      <h5 class="text-center text-danger mt-4">SUDAH PUNYA MOMONGAN BERAPA?</h5>
+      <h5 class="text-center text-danger mt-2">ANAKNYA MANA KOK GA DIBAWA?</h5>
+      <h5 class="text-center text-danger mt-2">LOH? KOK BELUM PUNYA ANAK?</h5>
+      <h5 class="text-center text-danger mt-2">UDAH LAMA NIKAH KAN YA?</h5>
+      <h5 class="text-center text-danger mt-2">LOH, KOK? ^%@*@#@!#!@</h5>
+      <h5 class="text-center text-danger mt-2">LOH, KOK? ^%@*@#@!#!@</h5>
+      <h3 class="text-center mt-4">"KAMI SUDAH BERUSAHA!"</h3>
+      <h6 class="text-center">
+        Itu mungkin pernyataan yang kamu simpan dalam hati.
+      </h6>
+      <hr />
+      <h5 class="text-center mt-4">
+        Jika "BENAR" hal di atas adalah situasi yang sedang kamu alami sekarang.
+        Maka ijinkan kami berbagi tips dan saran yang INSYAALLAH (dengan
+        kehendak Allah) dapat terwujud keinginan untuk memiliki buah hati
+      </h5>
     </div>
 
     <!-- clickbait end -->
@@ -106,9 +146,10 @@
     <!-- question section -->
     <section class="questions">
       <h1 class="fs-1 text-center" style="margin-bottom: 20px">
-        LALU, <span class="text-danger">BAGAIMANA TIPSNYA BIAR CEPAT HAMIL?</span>
+        LALU,
+        <span class="text-danger">BAGAIMANA TIPSNYA BIAR CEPAT HAMIL?</span>
       </h1>
-      <div class="row mb-5">
+      <div class="row mb-4">
         <div class="col-12">
           <img
             src="./images/utils/question1.png"
@@ -117,9 +158,8 @@
           />
         </div>
       </div>
-      <h1 class="fs-1 text-center">
-MEMPERKENALKAN
-      </h1>
+      <h6 class="my-4 text-center">Untuk calon Ayah dan Bunda Sekalian...</h6>
+      <h6 class="fw-bold text-center">IJINKAN KAMI MEMPERKENALKAN</h6>
       <h1 class="fs-1 text-center">
         <span class="text-danger fw-bold">MADU ZURIAT PROMIL ATH-THOIFAH</span>
       </h1>
@@ -133,7 +173,7 @@ MEMPERKENALKAN
       <div class="row">
         <div class="col-12 col-lg-6">
           <img
-            src="./images/utils/question1.png"
+            src="./images/brochure/1.png"
             alt=""
             class="card image-fluid image-question"
           />
@@ -245,16 +285,351 @@ MEMPERKENALKAN
         </div>
       </div>
     </section>
-    <div class="m-5"></div>
-    <section class="testimoni">
-      <h3 class="text-center fw-bold">TESTIMONI PEJUANG PROMIL</h3>
-      <h1 class="text-center">⭐⭐⭐⭐⭐</h1>
-    </section>
 
     <!-- benefit end -->
 
+    <!-- tips -->
+    <section class="benefit mb-5">
+      <h4 class="text-center" style="margin-bottom: 20px">
+        <span class="text-danger fw-bold">&#32;❤️&#32;TIPS CEPAT HAMIL❤️</span>
+      </h4>
+      <div class="d-block d-md-flex justify-content-center">
+        <div class="d-flex mb-3 mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold">Ketahui kapan masa subur.</span> Ini merupakan
+            hal yang sangat penting dalam merencanakan kehamilan. Tanpa
+            mengetahui masa subur Anda, Anda akan lebih sulit untuk hamil
+            walaupun Anda sudah sering bermain. Anda harus mengetahui kapan
+            telur dilepaskan dalam tubuh wanita.
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold">Asupan makanan dan minuman yang sehat.</span>
+            Konsumsilah makanan-makanan dan minuman-minuman yang sehat serta
+            bergizi.
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold">Jauhi rokok.</span> Jika biasa merokok,
+            sebaiknya suami, apalagi istri, berhenti merokok. Hindari pula
+            tempat-tempat yang banyak terpapar asap rokok atau menjadi perokok
+            pasif.
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold">Olahraga teratur.</span> Dengan berolahraga,
+            bukan hanya aktivitas seksual Anda (terutama suami) akan membaik,
+            melainkan juga kesehatan akan meningkat, sehingga bagus sekali untuk
+            mempersiapkan tempat bagi si jabang bayi di rahim sang istri.
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold">Berbahagialah.</span> Jauhi stres, lebih
+            sering tersenyum, milikilah pikiran positif akan apapun yang Anda
+            alami dan lihat. Yang tak kalah penting, istirahat yang cukup untuk
+            program hamil ini. (Kurangi Jam Kerja Kantor)
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold"
+              >Konsumsilah Madu Herbal Promil secara rutin.</span
+            >
+            Ini adalah usaha pamungkas untuk bisa cepat hamil. Konsumsi Saat
+            sebelum Atau Ketika Haid.
+          </p>
+        </div>
+        <div class="d-flex mb-3">
+          <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
+          <p class="p-0 m-0 fs-6">
+            <span class="fw-bold"
+              ><span class="text-danger">WAJIB!</span> Perbanyak doa dan
+              Berkhusnudzon (berprasangka baik) kepada Allah Yang Maha
+              Menghendaki.</span
+            >
+            Sesungguhnya Tuhanmu adalah Tuhan Yang Maha Baik maka mintalah
+            segala sesuatu kepada-Nya.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <hr />
+
+    <!-- tips end -->
+
+    <section class="testimoni mt-4">
+      <h3 class="text-center fw-bold">TESTIMONI PEJUANG PROMIL</h3>
+      <h1 class="text-center mb-3">⭐⭐⭐⭐⭐</h1>
+      <div class="container">
+        <img
+          src="./images/testimoni/testi1.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi2.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi3.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi4.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi5.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi6.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi7.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi8.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi9.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi10.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi11.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi12.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi13.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi14.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi15.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi16.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi17.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi18.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi19.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi21.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        /><img
+          src="./images/testimoni/testi20.png"
+          alt=""
+          class="image-fluid w-100 testi-image"
+        />
+      </div>
+    </section>
     <!-- footer -->
+    <div class="m-5"></div>
+    <!-- call -->
+    <!-- call end -->
+    <div class="m-4">
+      <h4 class="text-center" style="margin-bottom: 20px">
+        <span class="text-danger fw-bold"
+          >"SAYA MAU BERIKHTIAR MENGGUNAKAN MADU PROMIL"</span
+        >
+      </h4>
+      <div class="d-flex w-100 justify-content-center">
+        <a class="btn btn-success p-3">
+          <span class="w-100">PESAN SEKARANG</span>
+        </a>
+      </div>
+    </div>
+    <div class="container p-4 pt-0">
+      <div class="w-100 d-flex justify-content-evenly">
+        <img
+          src="./images/utils/logo seller transparent.png"
+          alt=""
+          style="max-width: 150px"
+          class="w-100"
+        />
+        <img
+          src="./images/utils/halal_mui.svg"
+          alt=""
+          style="max-width: 150px"
+          class="w-100"
+        />
+      </div>
+    </div>
+
     <div class="m-4"></div>
+    <div class="container" style="height: 500px">
+      <div
+        id="carouselExampleControls"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <!-- <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div> -->
+          <div class="carousel-item active">
+            <img
+              src="./images/product/m-1.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-2.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-3.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-4.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-5.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-6.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-7.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-8.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-9.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-10.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-11.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-12.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-13.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-14.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/product/m-15.png"
+              alt=""
+              class="d-block w-100 product-image"
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleControls"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+
     <section
       class="p-4 bg-dark d-flex flex-column align-items-center justify-content-center"
     >
