--- a/index.html
+++ b/index.html
@@ -4,8 +4,50 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="facebook-domain-verification"
+      content="ird4vpddhx4wd8yooyn3q1gqzw6l1l"
+    />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "379722770778360");
+      fbq("track", "PageView");
+      window.fbq = fbq;
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=379722770778360&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     <title>Madu Ath-Thoifah</title>
 
@@ -35,8 +77,8 @@
 
     <!-- wa icon -->
 
-    <div class="call__me">
-      <a href="#" class="">
+    <div class="call__me" title="Pesan Sekarang">
+      <a href="/redirect.html" class="">
         <img src="./images/utils/wa.png" height="50px" />
       </a>
     </div>
@@ -248,7 +290,7 @@
         <span class="text-danger fw-bold">MADU PROMIL BERKHASIAT SEPERTI </span>
         👇👇👇
       </h4>
-      <div class="d-block d-md-flex justify-content-center">
+      <div class="d-block d-lg-flex justify-content-center">
         <div class="d-flex mb-3 mb-3">
           <i class="p-0 m-0 fa-solid fa-circle-check text-danger fs-2 me-2"></i>
           <p class="p-0 m-0 fs-6 fw-bold">Menyuburkan sperma dan ovum</p>
@@ -293,7 +335,7 @@
       <h4 class="text-center" style="margin-bottom: 20px">
         <span class="text-danger fw-bold">&#32;❤️&#32;TIPS CEPAT HAMIL❤️</span>
       </h4>
-      <div class="d-block d-md-flex justify-content-center">
+      <div class="d-block d-lg-flex justify-content-center">
         <div class="d-flex mb-3 mb-3">
           <i class="p-0 m-0 fa-solid fa-check text-success fs-2 me-2"></i>
           <p class="p-0 m-0 fs-6">
@@ -470,15 +512,15 @@
         >
       </h4>
       <div class="d-flex w-100 justify-content-center">
-        <a class="btn btn-success p-3">
+        <a class="btn btn-success p-3" href="/redirect.html">
           <span class="w-100">PESAN SEKARANG</span>
         </a>
       </div>
     </div>
     <div class="container p-4 pt-0">
-      <div class="w-100 d-flex justify-content-evenly">
+      <div class="w-100 d-flex justify-content-evenly mb-3">
         <img
-          src="./images/utils/logo seller transparent.png"
+          src="./images/utils/logo.png"
           alt=""
           style="max-width: 150px"
           class="w-100"
@@ -489,6 +531,16 @@
           style="max-width: 150px"
           class="w-100"
         />
+      </div>
+      <div
+        class="btn btn-outline-success p-3 d-flex w-100 mb-3 fw-bold text-dark"
+      >
+        HALAL MUI NO. 00120077140516
+      </div>
+      <div
+        class="btn btn-outline-success p-3 d-flex w-100 fw-bold text-nowrap text-dark"
+      >
+        DINKES P-IRT NO. 2093275010271-19
       </div>
     </div>
 
